--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="logo.png" alt="Games Chirpss Logo">
+    <img src="GC_20251101_171220_0000.png" alt="Games Chirpss Logo">
     <h1>Games Chirpss</h1>
     <p>Coming Soon</p>
   </div>
